# metalyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  q
.github/workflows/: metalyzer.yml
benchmarks/: BENCHMARKS_V0.md  BENCHMARKS_V1.md  bench_calculator.cpp  bench_throughput.cpp  metalyzer_bench_c_subset.cpp  metalyzer_bench_calculator.cpp  metalyzer_bench_harness.hpp  metalyzer_bench_json.cpp  metalyzer_bench_throughput.cpp
benchmarks/flex_comparison/: bench_flex.cpp  c_subset.l  calculator.l  flex_bench_c_subset.cpp  flex_bench_calculator.cpp  flex_bench_harness.hpp  flex_bench_json.cpp  flex_bench_throughput.cpp  json_core.l  lex_calculator.l
benchmarks/results/: flex_metrics.json
benchmarks/results/metalyzer_benchmarks/: metalyzer_baseline_metrics.json  metalyzer_sliding_chunk_metrics.json
cmake/: RunSnapshotTest.cmake  VerifyProfile.cmake
include/metalyzer/frontend/: LexerSpec.hpp  SpecParser.hpp
include/metalyzer/generator/: Generator.hpp
include/metalyzer/lexer/: Compressor.hpp  DFA.hpp  LexerBuilder.hpp  Minimizer.hpp  NFA.hpp  PowerSetConstructor.hpp  Profiler.hpp  ThompsonConstructor.hpp  TransTable.hpp
src/lexer/: Compressor.cpp  Generator.cpp  LexerBuilder.cpp  Minimizer.cpp  PowerSetConstructor.cpp  Profiler.cpp  SpecParser.cpp  ThompsonConstructor.cpp
tests/: CMakeLists.txt  calculator.mz  json_core.mz  tab_test.mz
tests/inputs/: calculator.in  json_core.in
tests/snapshots/: calculator.snap  json_core.snap
tests/specs/: c_subset.mz  calculator.mz  json_core.mz
tools/: generate_bench_c_subset_input.py  generate_bench_calculator_input.py  generate_bench_json_core_input.py
